# knapsack-ai

./: .gitignore  LICENSE  README.md  environment.yml  pyproject.toml  requirements.txt
docs/: CHANGELOG.md  CONTRIBUTING.md  DATA_DICTIONARY.md  ROADMAP.md  VISION.md
knapsack/chem/: fingerprints.py  pubchem.py  standardize.py
knapsack/db/: loader.py  queries.py
knapsack/ml/: metrics.py  splitters.py
knapsack/utils/: config.py  io.py
